--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,6 +9,7 @@ crate-type=["lib"]
 
 [dependencies]
 redis-module = "0.10.0"
+dyn-clonable = "0.9.0"
 
 [dev-dependencies]
 redis-module = { version = "0.10.0", features = ["test"] }
