--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,8 +4,9 @@ version = "0.0.1"
 authors = ["Zhao Lang <eltoshan@gmail.com>"]
 edition = "2018"
 
-[lib]
-crate-type=["lib"]
+[[example]]
+name = "hello"
+crate-type = ["cdylib"]
 
 [dependencies]
 redis-module = "0.10.0"
