update for thread_local example

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,7 +6,7 @@ edition = "2018"
 description = "A command parser for redis modules"
 license = "Apache-2.0"
 repository = "https://github.com/zhao-lang/redismodule-cmd"
-exclude = [".gitignore", ".github/**""]
+exclude = [".gitignore", ".github/**"]
 readme = "README.md"
 
 [[example]]
