--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,6 +16,7 @@ crate-type = ["cdylib"]
 [dependencies]
 redis-module = "0.10.0"
 dyn-clonable = "0.9.0"
+itertools = "0.9.0"
 
 [dev-dependencies]
 redis-module = { version = "0.10.0", features = ["test"] }
