--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,14 +9,20 @@ repository = "https://github.com/zhao-lang/redismodule-cmd"
 exclude = [".gitignore", ".github/**"]
 readme = "README.md"
 
+[features]
+default = []
+docgen = []
+
 [[example]]
 name = "hello"
 crate-type = ["cdylib"]
+required-features = [ "docgen" ]
 
 [dependencies]
 redis-module = "0.10.0"
 dyn-clonable = "0.9.0"
 itertools = "0.9.0"
+redismodule_cmd_procmacros = { git = "https://github.com/zhao-lang/redismodule-cmd-procmacros" }
 
 [dev-dependencies]
 redis-module = { version = "0.10.0", features = ["test"] }
