--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -13,5 +13,24 @@ jobs:
 
     steps:
     - uses: actions/checkout@v2
+    - name: Install latest nightly
+      uses: actions-rs/toolchain@v1
+      with:
+          toolchain: nightly
+          override: true
+          components: rustfmt, clippy
+    
+    - uses: actions-rs/cargo@v1
+      with:
+        command: fmt
+        args: --all -- --check
+    - uses: actions-rs/cargo@v1
+      with:
+        command: clippy
+        args: -- -D warnings
+
     - name: Run test
-      run: cargo test --verbose --example hello --features docgen
+      uses: actions-rs/cargo@v1
+      with:
+        command: test
+        args: --verbose --example hello --features docgen
