--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -20,16 +20,19 @@ jobs:
           override: true
           components: rustfmt, clippy
     
-    - uses: actions-rs/cargo@v1
+    - name: Run rustfmt
+      uses: actions-rs/cargo@v1
       with:
         command: fmt
         args: --all -- --check
-    - uses: actions-rs/cargo@v1
+
+    - name: Run clippy
+      uses: actions-rs/cargo@v1
       with:
         command: clippy
         args: -- -D warnings
 
-    - name: Run test
+    - name: Run tests
       uses: actions-rs/cargo@v1
       with:
         command: test
